--- a/css/style.css
+++ b/css/style.css
@@ -77,13 +77,19 @@ ul#todo-list{
 }
 
 a{
-    all:unset;
-    position:absolute;
     display: flex;
+    all:unset;
     padding: 10px 0px;
     text-align: center;
-    font-size: 2.0em;
+    align-items: center;
+    background-color: none;
+    color : navy;
     font-weight: 500;
+    cursor: pointer;
     border-radius: 10px;
-    color : white;
+    transition: opacity linear .1s;
+}
+
+a:hover{
+    opacity: 0.8s;
 }
